--- a/space-finder/package.json
+++ b/space-finder/package.json
@@ -16,5 +16,8 @@
     "constructs": "^10.2.55",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.367.0"
   }
 }
