AWS DynamoDb with CDK and Lambda

--- a/space-finder/.vscode/launch.json
+++ b/space-finder/.vscode/launch.json
@@ -17,7 +17,8 @@
                 "${relativeFile}"
             ],
             "env": {
-                "AWS_REGION": "us-east-1"
+                "AWS_REGION": "us-east-1",
+                "TABLE_NAME": "SpaceTable-0a3589ce41df"
             }
         }
     ]
