--- a/space-finder/package.json
+++ b/space-finder/package.json
@@ -18,6 +18,9 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.367.0"
+    "@aws-sdk/client-dynamodb": "^3.363.0",
+    "@aws-sdk/client-s3": "^3.367.0",
+    "@aws-sdk/lib-dynamodb": "^3.365.0",
+    "@aws-sdk/util-dynamodb": "^3.365.0"
   }
 }
