--- a/cdk-starter-oct_24/package.json
+++ b/cdk-starter-oct_24/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cdk-starter-new",
+  "name": "cdk-starter-oct_24",
   "version": "0.1.0",
   "bin": {
-    "cdk-starter-new": "bin/cdk-starter-new.js"
+    "cdk-starter-oct_24": "bin/cdk-starter-oct_24.js"
   },
   "scripts": {
     "build": "tsc",
@@ -12,15 +12,15 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@types/node": "20.12.7",
+    "@types/node": "22.5.4",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
-    "aws-cdk": "2.145.0",
+    "ts-jest": "^29.2.5",
+    "aws-cdk": "2.161.1",
     "ts-node": "^10.9.2",
-    "typescript": "~5.4.5"
+    "typescript": "~5.6.2"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.145.0",
+    "aws-cdk-lib": "2.161.1",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
